codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__hidden_status_with_unified_exec_footer_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
                                                                                                                        
  1 background terminal running · /ps to view · /stop to close                                                          
                                                                                                                        
                                                                                                                        
› Ask Codex to do anything                                                                                              
                                                                                                                        
  ? for shortcuts                                                                                    100% context left
